--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -28,7 +28,11 @@ body.sticky-bottom-footer {
 }
 
 .container {
-  max-width: $max-content-width;
+  width: 100%;
+  padding-right: 0;
+  padding-left: 0;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 // Profile
