--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -1,30 +1,23 @@
-{% capture footer_contents %}
-  &copy; Copyright {{ site.time | date: '%Y' }}
-  {{ site.first_name }}
-  {{ site.middle_name }}
-  {{ site.last_name }}. {{ site.footer_text }}
-  {% if site.impressum_path %}
-    <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>.
-  {% endif %}
-  {% if site.last_updated %}
-    Last updated: {{ 'now' | date: '%B %d, %Y' }}.
-  {% endif %}
-{% endcapture %}
-
-{% if site.footer_fixed %}
-  <footer class="fixed-bottom" role="contentinfo">
-    <div class="container mt-0">
-      {{ footer_contents }}
+<footer class="site-footer">
+  <div class="container">
+    <div class="social-links">
+      {% if site.data.socials.email %}
+      <a href="mailto:{{ site.data.socials.email }}">
+        <i class="fas fa-envelope-square"></i> Email
+      </a>
+      {% endif %}
+      
+      {% if site.data.socials.github_username %}
+      <a href="https://github.com/{{ site.data.socials.github_username }}">
+        <i class="fab fa-github"></i> GitHub
+      </a>
+      {% endif %}
+      
+      <!-- Fallback or additional links can be added here -->
     </div>
-  </footer>
-{% else %}
-  <footer class="sticky-bottom mt-5" role="contentinfo">
-    {% if site.newsletter.enabled %}
-      {% include newsletter.liquid %}
-    {% endif %}
 
-    <div class="container">
-      {{ footer_contents }}
+    <div class="copyright">
+      &copy; {{ 'now' | date: '%Y' }} The Design Research Collective. Powered by Jekyll & Minimal Mistakes.
     </div>
-  </footer>
-{% endif %}
+  </div>
+</footer>
