--- a/_includes/projects.liquid
+++ b/_includes/projects.liquid
@@ -1,24 +1,26 @@
 <div class="col">
   <a href="{% if project.redirect %}{{ project.redirect }}{% else %}{{ project.url | relative_url }}{% endif %}">
-    <div class="card h-100 hoverable">
-      {% if project.img %}
-        {%
-          include figure.liquid
-          loading="eager"
-          path=project.img
-          sizes = "250px"
-          alt="project thumbnail"
-          class="card-img-top"
-        %}
-      {% endif %}
-      <div class="card-body">
-        <h2 class="card-title">{{ project.title }}</h2>
-        <p class="card-text">{{ project.description }}</p>
-        <div class="row ml-1 mr-1 p-0">
+    <div class="card-item h-100">
+      <div class="img-container">
+        {% if project.img %}
+          {%
+            include figure.liquid
+            loading="eager"
+            path=project.img
+            sizes = "250px"
+            alt="project thumbnail"
+          %}
+        {% endif %}
+      </div>
+      <div class="card-content">
+        <h5>{{ project.title }}</h5>
+        <p>{{ project.description }}</p>
+        
+        <div class="row justify-content-center ml-0 mr-0 p-0 mt-2">
           {% if project.github %}
             <div class="github-icon">
               <div class="icon" data-toggle="tooltip" title="Code Repository">
-                <a href="{{ project.github }}"><i class="fa-brands fa-github gh-icon"></i></a>
+                <a href="{{ project.github }}"><i class="fa-brands fa-github gh-icon" style="font-size: 1.2rem;"></i></a>
               </div>
               {% if project.github_stars %}
                 <span class="stars" data-toggle="tooltip" title="GitHub Stars">
