--- a/_layouts/people.liquid
+++ b/_layouts/people.liquid
@@ -3,31 +3,29 @@ layout: default
 ---
 
 <div class="container people-container people-page">
-  {% if page.title %}
+  {% if site.data.people.metadata.title %}
   <div class="people-header">
-    <h1>{{ page.title }}</h1>
-    {% if page.description %}
-    <p>{{ page.description }}</p>
+    <h1>{{ site.data.people.metadata.title }}</h1>
+    {% if site.data.people.metadata.description %}
+    <p>{{ site.data.people.metadata.description }}</p>
     {% endif %}
   </div>
   {% endif %}
 
-  <!-- Simplified Category Loop -->
-  {% assign category_order = "professor,postdoc,phd,ms,undergrad,alumni" | split: "," %}
-  {% assign category_titles = "Professor,Postdoctoral Researchers,Ph.D. Students,M.S. Students,Undergraduate Students,Alumni" | split: "," %}
-
-  {% for category in category_order %}
-    {% assign people_in_category = site.people | where: "category", category %}
+  <!-- Data-Driven Category Loop -->
+  {% for category_item in site.data.people.categories %}
+    {% assign category_key = category_item.key %}
+    {% assign category_title = category_item.title %}
+    
+    {% assign people_in_category = site.people | where: "category", category_key %}
     
     {% if people_in_category.size > 0 %}
     <div class="row mb-5 justify-content-center">
       <div class="col-12 mb-3">
-        <!-- Get Title by Index -->
-        {% assign idx = forloop.index0 %}
-        <h3 class="category-title border-bottom pb-2">{{ category_titles[idx] }}</h3>
+        <h3 class="category-title border-bottom pb-2">{{ category_title }}</h3>
       </div>
       
-      {% if category == 'alumni' %}
+      {% if category_key == 'alumni' %}
         <div class="col-12">
           <ul class="alumni-list" style="list-style: none; padding-left: 0;">
             {% for person in people_in_category %}
