--- a/_layouts/projects.liquid
+++ b/_layouts/projects.liquid
@@ -6,15 +6,15 @@ layout: default
 
   <!-- Projects Header -->
   <div class="projects-header">
-    <h1>{{ site.data.projects.header.title }}</h1>
+    <h1>{{ site.data.projects.metadata.title }}</h1>
     <p>
-      {{ site.data.projects.header.description }}
+      {{ site.data.projects.metadata.description }}
     </p>
   </div>
 
-{% if site.enable_project_categories and page.display_categories %}
+{% if site.enable_project_categories and site.data.projects.categories %}
   <!-- Display categorized projects -->
-  {% for category in page.display_categories %} 
+  {% for category in site.data.projects.categories %} 
   <div class="category-section">
     <a id="{{ category }}" href=".#{{ category }}">
       <div class="category-header">
@@ -24,7 +24,7 @@ layout: default
     </a>
   </div>
   
-  {% assign categorized_projects = site.projects | where: "category", category %}
+  {% assign categorized_projects = site.data.projects.items | where: "category", category %}
   {% assign sorted_projects = categorized_projects | sort: "importance" %}
   
   <!-- Generate list-style items for each project -->
@@ -49,7 +49,7 @@ layout: default
 
 <!-- Display projects without categories -->
 
-{% assign sorted_projects = site.projects | sort: "importance" %}
+{% assign sorted_projects = site.data.projects.items | sort: "importance" %}
 
   <!-- Generate list-style items for each project -->
 
