chore: 더미데이터 및 작성 가이드 작성 1차

--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -17,7 +17,7 @@
     </div>
 
     <div class="copyright">
-      &copy; {{ 'now' | date: '%Y' }} The Design Research Collective. Powered by Jekyll & Minimal Mistakes.
+      &copy; {{ 'now' | date: '%Y' }} The CORA Lab. Powered by Jekyll & Minimal Mistakes.
     </div>
   </div>
 </footer>
