--- a/_layouts/people.liquid
+++ b/_layouts/people.liquid
@@ -47,7 +47,7 @@ layout: default
           {% endif %}
           
             <div class="profile-img-container mb-3">
-               <img src="{{ person.image | relative_url }}" alt="{{ person.title }}" class="img-fluid rounded shadow-sm" style="width:100%; aspect-ratio:1/1; object-fit:cover;">
+               <img src="{{ person.image | default: '/assets/img/people/default.png' | relative_url }}" alt="{{ person.title }}" class="img-fluid rounded" style="width:100%; aspect-ratio: 1/1; object-fit: contain;">
             </div>
             <div class="profile-info text-center">
               <h5 class="profile-name font-weight-bold">{{ person.title }}</h5>
