feat: 연구실 저널 데이터 이식

--- a/_includes/publication_list_item.html
+++ b/_includes/publication_list_item.html
@@ -18,8 +18,8 @@
       {% if include.paper.pdf %}
       <a href="{{ include.paper.pdf | relative_url }}" target="_blank">PDF</a>
       {% endif %}
-      {% if include.paper.url %}
-      <a href="{{ include.paper.url }}" target="_blank">Link</a>
+      {% if include.paper.paper_url %}
+      <a href="{{ include.paper.paper_url }}" target="_blank">Link</a>
       {% endif %}
       {% if include.paper.code %}
       <a href="{{ include.paper.code }}" target="_blank">Code</a>
