--- a/_layouts/profile.liquid
+++ b/_layouts/profile.liquid
@@ -67,12 +67,14 @@ layout: default
         <span class="title"><i>{{ pub.title }}</i></span>, 
         <span class="journal">{{ pub.journal }}</span>
         {% if pub.paper %}
-        [<a href="{{ pub.paper }}">Paper</a>]
-        {% if pub.link %}
-        [<a href="{{ pub.link }}">Link</a>]
+        [<a href="{{ pub.paper }}" target="_blank">Paper</a>]
         {% endif %}
-      </li>
-      {% endfor %}
+        
+        {% if pub.link %}
+        [<a href="{{ pub.link }}" target="_blank">Link</a>]
+        {% endif %}
+        </li>
+        {% endfor %}
     </ul>
   </div>
   {% endif %}
