--- a/_layouts/profile.liquid
+++ b/_layouts/profile.liquid
@@ -18,7 +18,7 @@ layout: default
         {% endif %}
         
         {% if page.email %}
-        <li><strong>Email:</strong> <a href="mailto:{{ page.email }}">{{ page.email }}</a></li>
+        <li><strong>Email:</strong> <a href="mailto:{{ page.email }}" target="_self">{{ page.email }}</a></li>
         {% endif %}
         
         {% if page.contact_note %}
